# uefi-cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
include/: uefi.h
include/uefi/: boot_services.h  configuration_table.h  console_color.h  crc32.h  file_protocol.h  guid.h  handle.h  memory_attribute.h  memory_map.h  memory_type.h  non_copyable.h  revision.h  runtime_services.h  signature.h  signed_table.h  simple_file_system_protocol.h  simple_text_input_protocol.h  simple_text_output_protocol.h  status.h  system_table.h  table.h  table_header.h  task_priority_level.h  text_input_stream.h  text_output_stream.h  time.h
include/uefi/detail/: bit_flags.h
